--- a/pages/875.html
+++ b/pages/875.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
+<script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1533109147" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1533108238" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,20 +307,13 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
+      <div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
 <h4 id='relations'>Relations</h4>
 
-<div class='hide'>
-<p><strong><a class='existingWikiWord' href='/nlab/show/relation'>relation</a></strong>, <a class='existingWikiWord' href='/nlab/show/internal+relation'>internal relation</a></p>
-
-<p><strong><a class='existingWikiWord' href='/nlab/show/Rel'>Rel</a></strong>, <a class='existingWikiWord' href='/nlab/show/bicategory+of+relations'>bicategory of relations</a>, <a class='existingWikiWord' href='/nlab/show/allegory'>allegory</a></p>
-
-<h2 id='types_of_binary_relation'>Types of Binary relation</h2>
-
-<ul>
+<div class='hide'><p><strong><a class='existingWikiWord' href='/nlab/show/relation'>relation</a></strong>, <a class='existingWikiWord' href='/nlab/show/internal+relation'>internal relation</a></p><p><strong><a class='existingWikiWord' href='/nlab/show/Rel'>Rel</a></strong>, <a class='existingWikiWord' href='/nlab/show/bicategory+of+relations'>bicategory of relations</a>, <a class='existingWikiWord' href='/nlab/show/allegory'>allegory</a></p><h2 id='types_of_binary_relation'>Types of Binary relation</h2><ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/reflexive+relation'>reflexive</a>, <a class='existingWikiWord' href='/nlab/show/irreflexive+relation'>irreflexive</a></p>
 </li>
@@ -347,29 +339,25 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/functional+relation'>functional relations</a>,</p>
+<p><a class='existingWikiWord' href='/nlab/show/functional+relations'>functional relations</a>,</p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/entire+relation'>entire relations</a>,</p>
+<p><a class='existingWikiWord' href='/nlab/show/entire+relations'>entire relations</a>,</p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/equivalence+relation'>equivalence relations</a>, <a class='existingWikiWord' href='/nlab/show/congruence'>congruence</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/equivalence+relations'>equivalence relations</a>, <a class='existingWikiWord' href='/nlab/show/congruence'>congruence</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/apartness+relation'>apartness relations</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/apartness+relations'>apartness relations</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/category+of+simple+graphs'>simple graph</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/simple+graph'>simple graph</a></p>
 </li>
-</ul>
-
-<h2 id='in_higher_category_theory'>In higher category theory</h2>
-
-<ul>
+</ul><h2 id='in_higher_category_theory'>In higher category theory</h2><ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/2-congruence'>2-congruence</a></p>
 </li>
@@ -377,8 +365,7 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/%28n%2Cr%29-congruence'>(n,r)-congruence</a></p>
 </li>
-</ul>
-<div>
+</ul><div>
 <p>
   <a href='/nlab/edit/relations+-+contents'>Edit this sidebar</a>
 </p>
@@ -387,13 +374,19 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#definition'>Definition</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
+</ul>
+</div>
+
 <h2 id='definition'>Definition</h2>
 
-<p>A (binary) <a class='existingWikiWord' href='/nlab/show/relation'>relation</a> <math class='maruku-mathml' display='inline' id='mathml_fc7cd2db7d27544963062ad39292061c125bf115_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∼</mo></mrow><annotation encoding='application/x-tex'>\sim</annotation></semantics></math> on a set <math class='maruku-mathml' display='inline' id='mathml_fc7cd2db7d27544963062ad39292061c125bf115_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> is <strong>reflexive</strong> if every element of <math class='maruku-mathml' display='inline' id='mathml_fc7cd2db7d27544963062ad39292061c125bf115_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> is related to itself:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_fc7cd2db7d27544963062ad39292061c125bf115_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∀</mo><mo stretchy='false'>(</mo><mi>x</mi><mo>:</mo><mi>A</mi><mo stretchy='false'>)</mo><mo>,</mo><mspace width='thickmathspace'></mspace><mi>x</mi><mo>∼</mo><mi>x</mi></mrow><annotation encoding='application/x-tex'>\forall (x: A),\; x \sim x</annotation></semantics></math></div>
-<p>In the language of the <math class='maruku-mathml' display='inline' id='mathml_fc7cd2db7d27544963062ad39292061c125bf115_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-poset <a class='existingWikiWord' href='/nlab/show/Rel'>Rel</a> of sets and relations, a relation <math class='maruku-mathml' display='inline' id='mathml_fc7cd2db7d27544963062ad39292061c125bf115_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo>:</mo><mi>A</mi><mo>→</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>R: A \to A</annotation></semantics></math> is <strong>reflexive</strong> if it contains the identity relation on <math class='maruku-mathml' display='inline' id='mathml_fc7cd2db7d27544963062ad39292061c125bf115_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math>:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_fc7cd2db7d27544963062ad39292061c125bf115_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo lspace='0em' rspace='thinmathspace'>id</mo> <mi>A</mi></msub><mo>⊆</mo><mi>R</mi></mrow><annotation encoding='application/x-tex'>\id_A \subseteq R</annotation></semantics></math></div>
+<p>A (binary) <a class='existingWikiWord' href='/nlab/show/relation'>relation</a> <math class='maruku-mathml' display='inline' id='mathml_b563e35a6506216bd8e5fc27c996df0156d2b7db_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∼</mo></mrow><annotation encoding='application/x-tex'>\sim</annotation></semantics></math> on a set <math class='maruku-mathml' display='inline' id='mathml_b563e35a6506216bd8e5fc27c996df0156d2b7db_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> is <strong>reflexive</strong> if every element of <math class='maruku-mathml' display='inline' id='mathml_b563e35a6506216bd8e5fc27c996df0156d2b7db_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> is related to itself:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b563e35a6506216bd8e5fc27c996df0156d2b7db_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∀</mo><mo stretchy='false'>(</mo><mi>x</mi><mo>:</mo><mi>A</mi><mo stretchy='false'>)</mo><mo>,</mo><mspace width='thickmathspace'></mspace><mi>x</mi><mo>∼</mo><mi>x</mi></mrow><annotation encoding='application/x-tex'>\forall (x: A),\; x \sim x</annotation></semantics></math></div>
+<p>In the language of the <math class='maruku-mathml' display='inline' id='mathml_b563e35a6506216bd8e5fc27c996df0156d2b7db_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-poset <a class='existingWikiWord' href='/nlab/show/Rel'>Rel</a> of sets and relations, a relation <math class='maruku-mathml' display='inline' id='mathml_b563e35a6506216bd8e5fc27c996df0156d2b7db_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo>:</mo><mi>A</mi><mo>→</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>R: A \to A</annotation></semantics></math> is <strong>reflexive</strong> if it contains the identity relation on <math class='maruku-mathml' display='inline' id='mathml_b563e35a6506216bd8e5fc27c996df0156d2b7db_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math>:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b563e35a6506216bd8e5fc27c996df0156d2b7db_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo lspace='0em' rspace='thinmathspace'>id</mo> <mi>A</mi></msub><mo>⊆</mo><mi>R</mi></mrow><annotation encoding='application/x-tex'>\id_A \subseteq R</annotation></semantics></math></div>
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
@@ -410,30 +403,28 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/first+law+of+thought'>first law of thought</a></p>
+</li>
 </ul>
-
-<p>
- 
-</p>
-
-<p>
-</p>
 </div>
 
 <div class="revisedby">
-  Revised on December  2, 2012 20:17:53 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.113.106.154)
+  <p>
+  Last revised on August  5, 2018 at 05:14:58.
+  See the <a href="https://ncatlab.org/nlab/history/reflexive relation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/reflexive+relation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/reflexive+relation/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/reflexive+relation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/reflexive+relation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/reflexive+relation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/reflexive+relation/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/reflexive+relation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/reflexive+relation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/reflexive relation/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/reflexive+relation" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/reflexive+relation" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/reflexive+relation" id="view_source" rel="nofollow">Source</a>
