--- a/pages/19583.html
+++ b/pages/19583.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      AdS-CFT in condensed matter physics in nLab
+      Sachdev-Ye-Kitaev model in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      AdS-CFT in condensed matter physics
+      Sachdev-Ye-Kitaev model
   </h1>
 
 
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8694/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8822/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -307,96 +307,69 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <blockquote>
-<p>under construction</p>
-</blockquote>
+      <h2 id='idea'>Idea</h2>
 
-<h1 id='contents'>Contents</h1>
-<div class='maruku_toc'>
-<ul>
-<li><a href='#idea'>Idea</a></li>
-<li><a href='#related_concepts'>Related concepts</a></li>
-<li><a href='#references'>References</a></li>
-</ul>
-</div>
-
-<h2 id='idea'>Idea</h2>
-
-<p>There is some application of ideas from the <a class='existingWikiWord' href='/nlab/show/AdS-CFT+correspondence'>AdS-CFT correspondence</a> to <a class='existingWikiWord' href='/nlab/show/condensed+matter+physics'>condensed matter physics</a>.</p>
-
-<p>Andreas Karch writes <a href='http://www.math.columbia.edu/~woit/wordpress/?p=9426#comment-226376'>here</a>:</p>
+<p>From <a href='#MaldacenaStanford16'>Maldacena-Stanford 16</a>:</p>
 
 <blockquote>
-<p>These anomalous transport coefficients have first been calculated in AdS/CFT. The relevant references are [8], [9] and [10] in the Son/Surowka paper. In the AdS/CFT calculations these particular transport coefficients only arise due to Chern-Simons terms, which are the bulk manifestation of the field theory anomalies. At that point it was obvious to many of us that there should be a purely field theory based calculation, only using anomalies, that can derive these terms. Son and Surowka knew about this. They were sitting next door to me when they started these calculations. Many of us tried to find these purely field theory based arguments and failed. Son and Surowka succeeded.</p>
+<p>Studies of <a class='existingWikiWord' href='/nlab/show/AdS-CFT'>holography</a> have been hampered by the lack of a simple solvable model that can capture features of <a class='existingWikiWord' href='/nlab/show/Einstein+gravity'>Einstein gravity</a>. The simplest model, which is a single matrix quantum mechanics, does not appear to lead to black holes 23] for a review). <math class='maruku-mathml' display='inline' id='mathml_6b767e5917db25fee40341deb7a5eaa908076883_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N} = 4</annotation></semantics></math> super Yang Mills at strong ’t Hooft coupling certainly leads to black holes, and exact results are known at large <math class='maruku-mathml' display='inline' id='mathml_6b767e5917db25fee40341deb7a5eaa908076883_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi></mrow><annotation encoding='application/x-tex'>N</annotation></semantics></math> for many anomalous dimensions and some <a class='existingWikiWord' href='/nlab/show/vacuum+amplitude'>vacuum</a> <a class='existingWikiWord' href='/nlab/show/correlation+functions'>correlation functions</a>, but at finite temperature the theory is difficult to study.</p>
 
-<p>If you ask anyone serious about applying AdS/CFT to strongly coupled field theories why they are doing this, they would (hopefully) give you an answer along the lines of “AdS/CFT provides us with toy models of strongly coupled dynamics. While the field theories that have classical AdS duals are rather special, we can still learn important qualitative insights and find new ways to think about strongly coupled field theories.” Once AdS/CFT stumbles on a new phenomenon in these solvable toy models, we want to go back to see whether we can understand it without the crutch of having to rely on AdS/CFT. Any result that only applies in theories with holographic dual is somewhat limited in its applications. In this sense, anomalous transport is a poster child for what AdS/CFT can be used for: a new phenomenon that had been missed completely by people studying field theory gets uncovered by studying these toy models. Once we knew what to look for, a purely field theoretic argument was found that made the AdS/CFT derivation obsolete.</p>
+<p>A system that reproduces some of the dynamics of black holes should be interacting, but we might hope for a model with interactions that are simple enough that it is still reasonable solvable.</p>
 
-<p>This is applied AdS/CFT as it should be. Solvable examples exhibit new connections which then can be proven to be correct more generally and are not limited to the toy models that were used to uncover them.</p>
+<p>Kitaev has proposed to study a quantum mechanical model of <math class='maruku-mathml' display='inline' id='mathml_6b767e5917db25fee40341deb7a5eaa908076883_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi></mrow><annotation encoding='application/x-tex'>N</annotation></semantics></math> Majorana fermions interacting with random interactions (<a href='#Kitaev15'>Kitaev 15</a>). It is a simple variant of a model introduced by Sachdev and Ye (<a href='#SachdevYe93'>Sachdev-Ye 93</a>), which was first discussed in relation to <a class='existingWikiWord' href='/nlab/show/AdS-CFT'>holography</a> in [5].</p>
 </blockquote>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Sachdev-Ye-Kitaev+model'>Sachdev-Ye-Kitaev model</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/AdS-CFT+in+condensed+matter+physics'>AdS-CFT in condensed matter physics</a></li>
 </ul>
 
 <h2 id='references'>References</h2>
 
-<p>Application of AdS-CFT in <a class='existingWikiWord' href='/nlab/show/condensed+matter+physics'>condensed matter physics</a> goes back to</p>
-
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Giuseppe+Policastro'>Giuseppe Policastro</a>, D.T. Son, A.O. Starinets, <em>Shear viscosity of strongly coupled N=4 supersymmetric Yang-Mills plasma</em>, Phys. Rev. Lett.87:081601, 2001 (<a href='http://arxiv.org/abs/hep-th/0104066'>arXiv:hep-th/0104066</a>)</li>
+<li id='SachdevYe93'>
+<p><a class='existingWikiWord' href='/nlab/show/Subir+Sachdev'>Subir Sachdev</a>, Jinwu Ye, <em>Gapless Spin-Fluid Ground State in a Random Quantum Heisenberg Magnet</em>, Phys.Rev.Lett.70:3339, 1993 (<a href='https://arxiv.org/abs/cond-mat/9212030'>arXiv:cond-mat/9212030</a>)</p>
+</li>
+
+<li id='Kitaev15'>
+<p><a class='existingWikiWord' href='/nlab/show/Alexei+Kitaev'>Alexei Kitaev</a>, <em>A simple model of quantum holography</em>, Talks at KITP, April 7, 2015 and May 27, 2015. (<a href='#http://online.kitp.ucsb.edu/online/entangled15/kitaev/'>part I</a>, <a href='http://online.kitp.ucsb.edu/online/entangled15/kitaev2/'>part II</a>)</p>
+</li>
+
+<li id='MaldacenaStanford16'>
+<p><a class='existingWikiWord' href='/nlab/show/Juan+Maldacena'>Juan Maldacena</a>, Douglas Stanford, <em>Comments on the Sachdev-Ye-Kitaev model</em> (<a href='https://arxiv.org/abs/1604.07818'>arXiv:1604.07818</a>)</p>
+</li>
 </ul>
 
-<p>A comprehensive textbook account is in</p>
+<p>Discussion in view of <a class='existingWikiWord' href='/nlab/show/AdS-CFT+duality'>AdS-CFT duality</a> includes:</p>
 
 <ul>
-<li id='HartnollLucasSachdev16'>Sean A. Hartnoll, Andrew Lucas, <a class='existingWikiWord' href='/nlab/show/Subir+Sachdev'>Subir Sachdev</a>, <em>Holographic quantum matter</em>, MIT Press 2018 (<a href='https://arxiv.org/abs/1612.07324'>arXiv:1612.07324</a>, <a href='https://mitpress.ublish.com/book/holographic-quantum-matter'>publisher</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Juan+Maldacena'>Juan Maldacena</a>, <em>Toy models for black holes II</em>, talk at PiTP 2018 <em>From QBits to spacetime</em> (<a href='https://video.ias.edu/PiTP/2018/0726-JuanMaldacena'>recording</a>)</li>
 </ul>
 
-<p>Reviews include the following:</p>
-
-<ul>
-<li>
-<p>A S T Pires, <em>Ads/CFT correspondence in condensed matter</em> (<a href='http://arxiv.org/abs/1006.5838'>arXiv:1006.5838</a>)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Subir+Sachdev'>Subir Sachdev</a>, <em>Condensed matter and AdS/CFT</em> (<a href='http://arxiv.org/abs/1002.2947'>arXiv:1002.2947</a>)</p>
-</li>
-
-<li>
-<p>Yuri V. Kovchegov, <em>AdS/CFT applications to relativistic heavy ion collisions: a brief review</em> (<a href='http://arxiv.org/abs/1112.5403'>arXiv:1112.5403</a>)</p>
-</li>
-
-<li>
-<p>Alberto Salvio, <em>Superconductivity, Superfluidity and Holography</em> (<a href='http://arxiv.org/abs/1301.0201'>arXiv:1301.0201</a>)</p>
-</li>
-
-<li id='SantiagodeCompostela18'>
-<p><em><a href='http://igfae.usc.es/~holoquark2018/'>Holography and Extreme Chromodynamics</a></em>, Santiago de Compostela, July 2018</p>
-</li>
-</ul>
+<blockquote>
+<p>The SYK model gives us a glimpse into the interior of an <a class='existingWikiWord' href='/nlab/show/extremal+black+hole'>extremal black hole</a>…That’s the feature of SYK that I find most interesting…It is a feature this model has, that I think no other model has</p>
+</blockquote>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August  5, 2018 at 06:58:19.
-  See the <a href="https://ncatlab.org/nlab/history/AdS-CFT in condensed matter physics" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on August  5, 2018 at 06:57:50.
+  See the <a href="https://ncatlab.org/nlab/history/Sachdev-Ye-Kitaev model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/AdS-CFT+in+condensed+matter+physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AdS-CFT+in+condensed+matter+physics/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/AdS-CFT+in+condensed+matter+physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AdS-CFT+in+condensed+matter+physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/AdS-CFT in condensed matter physics/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Sachdev-Ye-Kitaev+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Sachdev-Ye-Kitaev model/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/AdS-CFT+in+condensed+matter+physics" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Sachdev-Ye-Kitaev+model" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/AdS-CFT+in+condensed+matter+physics" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Sachdev-Ye-Kitaev+model" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/AdS-CFT+in+condensed+matter+physics" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Sachdev-Ye-Kitaev+model" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
