--- a/pages/16926.html
+++ b/pages/16926.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
+<script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1533109147" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1533108238" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,7 +307,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>10-dimensional <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a></p>
+      <p>10-<a class='existingWikiWord' href='/nlab/show/dimension'>dimensional</a> <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a></p>
 
 <ul>
 <li>
@@ -316,28 +315,70 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/heterotic+string+theory'>heterotic supergravity</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/heterotic+supergravity'>heterotic supergravity</a></p>
 </li>
 </ul>
 
-<p>
-</p>
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/12-dimensional+supergravity'>12-dimensional supergravity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/11-dimensional+supergravity'>11-dimensional supergravity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/9-dimensional+supergravity'>9-dimensional supergravity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/8-dimensional+supergravity'>8-dimensional supergravity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/7-dimensional+supergravity'>7-dimensional supergravity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/6-dimensional+supergravity'>6-dimensional supergravity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/5-dimensional+supergravity'>5-dimensional supergravity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/4-dimensional+supergravity'>4-dimensional supergravity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/3-dimensional+supergravity'>3-dimensional supergravity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/2-dimensional+supergravity'>2-dimensional supergravity</a></p>
+</li>
+</ul>
 </div>
 
 <div class="revisedby">
-  Created on November 12, 2015 10:07:15 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.113.121.12)
+  <p>
+  Last revised on August  5, 2018 at 09:02:53.
+  See the <a href="https://ncatlab.org/nlab/history/10-dimensional supergravity" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/10-dimensional+supergravity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/10-dimensional+supergravity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/10-dimensional+supergravity/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/10-dimensional+supergravity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/10-dimensional+supergravity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/10-dimensional supergravity/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/10-dimensional+supergravity" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/10-dimensional+supergravity" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/10-dimensional+supergravity" id="view_source" rel="nofollow">Source</a>
