--- a/pages/10460.html
+++ b/pages/10460.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
+<script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1533109147" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1533108238" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5310/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,11 +307,17 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+      <h1 id='contents'>Contents</h1>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id='idea'>Idea</h2>
 
-<p>The <em>Walker-Wang model</em> is a <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>model (in theoretical physics)</a> which is a <a class='existingWikiWord' href='/nlab/show/4d+TQFT'>4d TQFT</a> analog of the <a class='existingWikiWord' href='/nlab/show/Levin-Wen+model'>Levin-Wen model</a> <a class='existingWikiWord' href='/nlab/show/3d+TQFT'>3d TQFT</a>. It should be closely related to the <a class='existingWikiWord' href='/nlab/show/Yetter+model'>Yetter model</a>. It is speculated to have some application to <span class='newWikiWord'>topological insulators<a href='/nlab/new/topological+insulators'>?</a></span> in <a class='existingWikiWord' href='/nlab/show/solid+state+physics'>solid state physics</a>.</p>
+<p>The <em>Walker-Wang model</em> is a <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>model (in theoretical physics)</a> which is a <a class='existingWikiWord' href='/nlab/show/4d+TQFT'>4d TQFT</a> analog of the <a class='existingWikiWord' href='/nlab/show/Levin-Wen+model'>Levin-Wen model</a> <a class='existingWikiWord' href='/nlab/show/3d+TQFT'>3d TQFT</a>. It should be closely related to the <a class='existingWikiWord' href='/nlab/show/Crane-Yetter+model'>Crane-Yetter model</a>. It is speculated to have some application to <span class='newWikiWord'>topological insulators<a href='/nlab/new/topological+insulators'>?</a></span> in <a class='existingWikiWord' href='/nlab/show/solid+state+physics'>solid state physics</a>.</p>
 
 <h2 id='references'>References</h2>
 
@@ -328,19 +333,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August 21, 2014 01:02:05 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous Coward</a>
-  (74.44.77.52)
+  <p>
+  Last revised on August  7, 2018 at 17:29:33.
+  See the <a href="https://ncatlab.org/nlab/history/Walker-Wang model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Walker-Wang+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Walker-Wang+model/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Walker-Wang+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Walker-Wang+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Walker-Wang+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Walker-Wang+model/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Walker-Wang+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Walker-Wang+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Walker-Wang model/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Walker-Wang+model" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Walker-Wang+model" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Walker-Wang+model" id="view_source" rel="nofollow">Source</a>
