--- a/pages/10460.html
+++ b/pages/10460.html
@@ -317,7 +317,7 @@ margin-left: 0em;
 
 <h2 id='idea'>Idea</h2>
 
-<p>The <em>Walker-Wang model</em> is a <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>model (in theoretical physics)</a> which is a <a class='existingWikiWord' href='/nlab/show/4d+TQFT'>4d TQFT</a> analog of the <a class='existingWikiWord' href='/nlab/show/Levin-Wen+model'>Levin-Wen model</a> <a class='existingWikiWord' href='/nlab/show/3d+TQFT'>3d TQFT</a>. It should be closely related to the <a class='existingWikiWord' href='/nlab/show/Crane-Yetter+model'>Crane-Yetter model</a>. It is speculated to have some application to <span class='newWikiWord'>topological insulators<a href='/nlab/new/topological+insulators'>?</a></span> in <a class='existingWikiWord' href='/nlab/show/solid+state+physics'>solid state physics</a>.</p>
+<p>The <em>Walker-Wang model</em> is a <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>model (in theoretical physics)</a> which is a <a class='existingWikiWord' href='/nlab/show/4d+TQFT'>4d TQFT</a> analog of the <a class='existingWikiWord' href='/nlab/show/Levin-Wen+model'>Levin-Wen model</a> <a class='existingWikiWord' href='/nlab/show/3d+TQFT'>3d TQFT</a>. It is the <a class='existingWikiWord' href='/nlab/show/Hamiltonian'>Hamiltonian</a> formulation of the TQFT whose <a class='existingWikiWord' href='/nlab/show/partition+function'>partition function</a> formulation is the <a class='existingWikiWord' href='/nlab/show/Crane-Yetter+model'>Crane-Yetter model</a>. It is speculated to have some application to <a class='existingWikiWord' href='/nlab/show/topological+insulators'>topological insulators</a> in <a class='existingWikiWord' href='/nlab/show/solid+state+physics'>solid state physics</a>.</p>
 
 <h2 id='references'>References</h2>
 
@@ -334,14 +334,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on August  7, 2018 at 17:29:33.
+  Last revised on August  8, 2018 at 03:55:50.
   See the <a href="https://ncatlab.org/nlab/history/Walker-Wang model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Walker-Wang+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Walker-Wang+model/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Walker-Wang+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Walker-Wang+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Walker-Wang+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Walker-Wang+model/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Walker-Wang+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Walker-Wang+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Walker-Wang model/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
