--- a/pages/18202.html
+++ b/pages/18202.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
+<script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1533109147" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1533108238" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/7735/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,18 +307,13 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
+      <div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='contex'>Contex</h3>
 
 <h4 id='category_theory'>Category theory</h4>
 
-<div class='hide'>
-<p><strong><a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a></strong></p>
-
-<h2 id='concepts'>Concepts</h2>
-
-<ul>
+<div class='hide'><p><strong><a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a></strong></p><h2 id='concepts'>Concepts</h2><ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/category'>category</a></p>
 </li>
@@ -335,11 +329,7 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Cat'>Cat</a></p>
 </li>
-</ul>
-
-<h2 id='universal_constructions'>Universal constructions</h2>
-
-<ul>
+</ul><h2 id='universal_constructions'>Universal constructions</h2><ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/universal+construction'>universal construction</a></p>
 
@@ -361,7 +351,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/end'>end</a>/<a class='existingWikiWord' href='/nlab/show/end'>coend</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/end'>end</a>/<a class='existingWikiWord' href='/nlab/show/coend'>coend</a></p>
 </li>
 
 <li>
@@ -369,11 +359,7 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul>
-
-<h2 id='theorems'>Theorems</h2>
-
-<ul>
+</ul><h2 id='theorems'>Theorems</h2><ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Yoneda+lemma'>Yoneda lemma</a></p>
 </li>
@@ -417,11 +403,7 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/relation+between+type+theory+and+category+theory'>relation between type theory and category theory</a></p>
 </li>
-</ul>
-
-<h2 id='extensions'>Extensions</h2>
-
-<ul>
+</ul><h2 id='extensions'>Extensions</h2><ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/sheaf+and+topos+theory'>sheaf and topos theory</a></p>
 </li>
@@ -433,14 +415,9 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a></p>
 </li>
-</ul>
-
-<h2 id='applications'>Applications</h2>
-
-<ul>
+</ul><h2 id='applications'>Applications</h2><ul>
 <li><a class='existingWikiWord' href='/nlab/show/applications+of+%28higher%29+category+theory'>applications of (higher) category theory</a></li>
-</ul>
-<div>
+</ul><div>
 <p>
   <a href='/nlab/edit/category+theory+-+contents'>Edit this sidebar</a>
 </p>
@@ -449,12 +426,19 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id='idea'>Idea</h2>
 
-<p>The <em>free category</em> on a “set of arrows”, hence on a <a class='existingWikiWord' href='/nlab/show/directed+graph'>directed graph</a>, is the <a class='existingWikiWord' href='/nlab/show/category'>category</a> whose <a class='existingWikiWord' href='/nlab/show/morphism'>morphisms</a> are the <a class='existingWikiWord' href='/nlab/show/tuple'>tuples</a> of composable arrows, hence the morphisms <a class='existingWikiWord' href='/nlab/show/free+functor'>freely generated</a> from these arrows. These morphisms may also be thought of as the “paths” that one may trace out in the directed graph by traversing in each step along along an arrow, and therefore free categories are also called <em><a class='existingWikiWord' href='/nlab/show/path+category'>path categories</a></em>.</p>
+<p>The <em>free category</em> on a “set of arrows”, hence on a <a class='existingWikiWord' href='/nlab/show/directed+graph'>directed graph</a>, is the <a class='existingWikiWord' href='/nlab/show/category'>category</a> whose <a class='existingWikiWord' href='/nlab/show/morphisms'>morphisms</a> are the <a class='existingWikiWord' href='/nlab/show/tuples'>tuples</a> of composable arrows, hence the morphisms <a class='existingWikiWord' href='/nlab/show/free+construction'>freely generated</a> from these arrows. These morphisms may also be thought of as the “paths” that one may trace out in the directed graph by traversing in each step along an arrow, and therefore free categories are also called <em><a class='existingWikiWord' href='/nlab/show/path+categories'>path categories</a></em>.</p>
 
-<p>More formally, there is a <a class='existingWikiWord' href='/nlab/show/forgetful+functor'>forgetful functor</a> from the <a class='existingWikiWord' href='/nlab/show/1-category'>1-category</a> of <a class='existingWikiWord' href='/nlab/show/category'>categories</a> to that of <a class='existingWikiWord' href='/nlab/show/directed+graph'>directed graphs</a>, and the free category construction is the <a class='existingWikiWord' href='/nlab/show/left+adjoint'>left adjoint</a> to this functor.</p>
+<p>More formally, there is a <a class='existingWikiWord' href='/nlab/show/forgetful+functor'>forgetful functor</a> from the <a class='existingWikiWord' href='/nlab/show/1-category'>1-category</a> of <a class='existingWikiWord' href='/nlab/show/categories'>categories</a> to that of <a class='existingWikiWord' href='/nlab/show/directed+graphs'>directed graphs</a>, and the free category construction is the <a class='existingWikiWord' href='/nlab/show/left+adjoint'>left adjoint</a> to this functor.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -487,7 +471,7 @@ margin-left: 0em;
 <p>and in</p>
 
 <ul>
-<li id='MacLane'><a class='existingWikiWord' href='/nlab/show/Saunders+Mac+Lane'>Saunders MacLane</a>, <em><a class='existingWikiWord' href='/nlab/show/Categories+Work'>Categories for the Working Mathematician</a></em> , Springer 1998.</li>
+<li id='MacLane'><a class='existingWikiWord' href='/nlab/show/Saunders+MacLane'>Saunders MacLane</a>, <em><a class='existingWikiWord' href='/nlab/show/Categories+for+the+Working+Mathematician'>Categories for the Working Mathematician</a></em> , Springer 1998.</li>
 </ul>
 
 <p>The following is another source for this, even an open source:</p>
@@ -512,30 +496,24 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>Since the perspective on categories as ‘graphs with operations’ is closely related to their ‘logico-deductive’ side, it figures prominently in the work of <a class='existingWikiWord' href='/nlab/show/Joachim+Lambek'>Jim Lambek</a> and <a class='existingWikiWord' href='/nlab/show/Philip+Scott'>Phil Scott</a> (cf. the references at <a class='existingWikiWord' href='/nlab/show/free+topos'>free topos</a>).</p>
-
-<p>
-</p>
-
-<p>
- 
-</p>
+<p>Since the perspective on categories as ‘graphs with operations’ is closely related to their ‘logico-deductive’ side, it figures prominently in the work of <a class='existingWikiWord' href='/nlab/show/Jim+Lambek'>Jim Lambek</a> and <a class='existingWikiWord' href='/nlab/show/Phil+Scott'>Phil Scott</a> (cf. the references at <a class='existingWikiWord' href='/nlab/show/free+topos'>free topos</a>).</p>
 </div>
 
 <div class="revisedby">
-  Created on May  5, 2017 15:05:28 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (92.218.150.85)
+  <p>
+  Last revised on August  8, 2018 at 09:44:20.
+  See the <a href="https://ncatlab.org/nlab/history/free category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/free+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/free+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/free+category/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/free+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/free+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/free category/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/free+category" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/free+category" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/free+category" id="view_source" rel="nofollow">Source</a>
